# Voice-to-PCR-Assistant-for-EMS

./: .gitignore  README.md
backend/: .env.example  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/endpoints/: correction.py  evaluation.py  extraction.py  gap_completion.py  gap_detection.py  health.py  pcr_export.py  sessions.py  transcription.py
backend/app/api/v1/websocket/: realtime.py
backend/app/core/: gap_detector.py  pcr_state_manager.py  session_manager.py  vitals_validator.py
backend/app/schemas/: correction.py  evaluation.py  extraction.py  gap_completion.py  nemsis.py  pcr.py  session.py  transcription.py  websocket.py
backend/app/services/asr/: base.py  whisper_local.py
backend/app/services/correction/: correction_handler.py  correction_parser.py
backend/app/services/extraction/: base.py  finetuned_extractor.py  llm_baseline_extractor.py
backend/app/services/llm/: ollama_client.py
backend/app/utils/: audio.py  logging.py  timing.py
backend/evaluation/: comparator.py  completeness.py  metrics.py  run_evaluation.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_pcr.json  sample_transcript.txt
backend/tests/unit/: test_gap_detector.py  test_metrics.py  test_nemsis_schema.py  test_pcr_state_manager.py
backend/training/data_gen/: augmentor.py  scenario_templates.py  synthetic_generator.py  validate_pairs.py
backend/training/fine_tune/: config.py  dataset.py  train_t5.py
data/: distributions.json  (+3 more)
(+84 files in other folders)
