[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-to-pcr-backend"
version = "0.1.0"
description = "Real-time Voice to PCR Assistant for EMS - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    "anthropic>=0.35.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
training = [
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "torch>=2.4.0",
    "datasets>=3.0.0",
    "accelerate>=0.33.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
